FIX: Align css to reflect AA media queries long practice Phase 7 project requirements

--- a/styles/timeline.css
+++ b/styles/timeline.css
@@ -88,5 +88,6 @@
 @media print {
     .timeline-scroll-area {
 	overflow-x: visible;
+	width: unset;
     }
 }
